# LearnSync

./: .env.example  .gitignore  ADAPTIVE_LEARNING_GUIDE.md  ADAPTIVE_LEARNING_IMPLEMENTATION.md  ADAPTIVE_LEARNING_TESTING.md  CHATBOT_DESIGN_GUIDE.md  CHATBOT_STREAMING_BUGFIX.md  CHATBOT_STREAMING_ENHANCEMENT.md  COMPLETE_ENHANCEMENT_SUMMARY.md  EDUSAATHI_ODIA_CHATBOT.md  NEW_FEATURES_SUMMARY.md  PERSONALIZATION_GUIDE.md  PERSONALIZATION_SYSTEM.md  PERSONALIZED_GAMES_IMPLEMENTATION.md  TRUE_PERSONALIZATION_SYSTEM.md  VISUAL_GAMES_IMPLEMENTATION.md  YOUTUBE_DESIGN_GUIDE.md  YOUTUBE_FEATURES_SUMMARY.md  YOUTUBE_GAMIFICATION.md  YOUTUBE_INTEGRATION_GUIDE.md  design_guidelines.md  examples.py  main.py  new.py  nginx-config.conf  package-lock.json  package.json  pyproject.toml  qtest.py  requirements.txt  scraped_data_tecosys.in.md  start.bat  start.sh  test.py
.github/: copilot-instructions.md
backend/: .dockerignore  .gitignore  CHATBOT_GUIDE.md  Dockerfile  LearnSync.postman_collection.json  QUICKSTART.md  README.md  config.py  docker-compose.yml  main.py  nohup.out  pyproject.toml  registration_examples.py  requirements.txt
backend/app/routes/: analytics.py  assessments.py  chatbot.py  communication.py  courses.py  gamification.py  tts.py  users.py  voice.py  whatsapp.py  youtube.py
backend/app/schemas/: chatbot.py  gamification.py
backend/app/services/: adaptive_learning_service.py  assessment_service.py  chatbot_service.py  course_service.py  user_service.py  youtube_service.py
backend/app/utils/: ai_client.py  auth.py  database.py
client/: index.html
(+109 files in other folders)
